--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -7,6 +7,17 @@
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
+li {
+  list-style-type: none;
+}
+
+.img-workout {
+  width: 50px;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
 .dashboard-header {
   background-color: #007bff;
   color: white;
